<?xml version="1.0" encoding="utf-8"?>
<com.github.captain_miao.optroundcardview.OptRoundCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardFrame"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="3dp"
    app:optRoundCardCornerRadius="8dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/imgInput"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="4dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_history"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            tools:ignore="UnusedAttribute"
            android:contentDescription="@string/image_input"/>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/textContainer"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingTop="4dp"
            android:paddingBottom="4dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imgInput"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/encryptedText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/file_system_storage"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent"/>

            <LinearLayout
                android:id="@+id/linearInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/encryptedText"
                tools:layout_editor_absoluteX="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:textSize="14sp"
                    android:text="@string/input_view" />

                <TextView
                    android:id="@+id/tvLine1"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:textColor="@color/black"
                    android:layout_height="wrap_content"
                    android:text="@string/input"
                    android:gravity="end"
                    android:textSize="14sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/linearResult"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:orientation="horizontal"
                android:weightSum="2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearInput"
                tools:layout_editor_absoluteX="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="start"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:text="@string/result_view" />

                <TextView
                    android:id="@+id/tvLine2"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:text="@string/result"
                    android:gravity="end"
                    android:textColor="@color/black"
                    android:textSize="16sp"/>
            </LinearLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</com.github.captain_miao.optroundcardview.OptRoundCardView>